Added a title and a h1 tag. Hello World

--- a/index.htm
+++ b/index.htm
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Untitled Document</title>
+<title>Git Book Exercises</title>
 </head>
 
 <body>
-
+	<h1>Hello World</h1>
 </body>
 </html>
