--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 
 <body>
 	<h1>Hello World</h1>
-    <a href="#">Biography</a>
+    <a href="#">About</a>
     <h2>Hello Git world</h2>
     <h3>Hello Everyone</h3>
 </body>
