Added a Bio link to master

--- a/index.htm
+++ b/index.htm
@@ -8,6 +8,10 @@
 <body>
 	<h1>Hello World</h1>
     <a href="#">About</a>
+    <a href="#">Biography</a>
+    <h2>Hello Git world</h2>
+    <h3>Hello Everyone</h3>
+    <h4>How are the?</h4>
     
 </body>
 </html>
